Update odd and even rows when highlighting result table rows.

--- a/intermine/webapp/main/resources/webapp/themes/gold/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/gold/theme.css
@@ -118,7 +118,7 @@ div.title h1 {
 .title a:link{
 	color:#FFF;}
 
-table.results tr td.highlightCell {
+table.results tr td.highlightCell, table.results tr.even td.highlightCell {
   background-color: #FFCBFF;}
 
 .widget {
