--- a/intermine/webapp/main/resources/webapp/themes/blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/blue/theme.css
@@ -135,7 +135,7 @@ div#filter_tool_bar {
 table.results tr th {
     background-color: #192F39;font-size: 12px;color:#FFF;
 }
-table.results tr td.highlightCell {
+table.results tr td.highlightCell, table.results tr.even td.highlightCell {
  	border-right:1px solid #FFF;background-color: #63BBDF;}
 
 table.results tfoot tr td {
