--- a/intermine/webapp/main/resources/webapp/themes/bright_blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/bright_blue/theme.css
@@ -198,7 +198,7 @@ table.dbsources td.leftcol {
 table.results tr th {
     background-color: #353B40;font-size: 12px;color:#FFF;
 }
-table.results tr td.highlightCell {
+table.results tr td.highlightCell, table.results tr.even td.highlightCell {
  	border-right:1px solid #FFF;background-color: #7EE6FF;}
 
 table.results tfoot tr td {
