--- a/intermine/webapp/main/resources/webapp/themes/grey/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/grey/theme.css
@@ -209,7 +209,7 @@ table.dbsources td.leftcol {
 table.results tr th {
     background-color: #000;font-size: 12px;color:#FFF;
 }
-table.results tr td.highlightCell {
+table.results tr td.highlightCell, table.results tr.even td.highlightCell {
  	border-right:1px solid #FFF;background-color: #888;}
 
 table.results tfoot tr td {
