--- a/intermine/webapp/main/resources/webapp/themes/gold/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/gold/theme.css
@@ -6,14 +6,58 @@ body {
 	background:#FFF5B2 url('top_gradient.png') repeat-x;
 }
 
+a {
+    color: #00e;}
 
-/* =CUSTOMISABLE LOOK
+h1, h2, h3, h1 a, h1 a:visited, label {
+    color:#192F39;
+}
+h1 a:hover,h1 a:visited:hover  {
+    color:#192F39;
+    text-decoration: underline;
+}
+
+div.heading, div.heading2, div.heading a,div .heading2  a {
+    background-color:#B9E6F9;
+    color:#192F39;
+}
+
+/* =HEADER
 --------------------------*/
+div#header h1, 
+div#header h1 a, 
+div#header h1 a:link,
+div#header h1 a:visited, 
+div#header p {
+    color:#FFFFFF;
+}
+
+#topnav {
+    background-color: #362923;}
 
 #pagecontent {
-  border-left:1px solid #362923;
-  border-right:1px solid #362923;
-  border-bottom:1px solid #362923;
+   border-left:1px solid #362923;
+   border-right:1px solid #362923;
+   border-bottom:1px solid #362923;
+}   
+
+
+#loginbar  a:link, #loginbar a:visited, #loginbar{
+	color:#000;}
+
+/* =BODY
+--------------------------*/
+
+/*??NOT USED??*/
+.box .title {
+  padding: 5px;
+  text-align: left;
+  font-weight: normal;
+  font-size: 14px;
+  font-weight: bold;
+  background: #eee;
+  border-top: 1px solid #888;
+  border-bottom: 1px solid #888;
 }
 
 .plainbox {
@@ -22,20 +66,24 @@ body {
 
 .gradientbox {
 	padding:10px; 
-	border:1px solid #362923;
-	/*background: url('grad_box.png') repeat-x;*/}
+	border:1px solid #362923;background: url('grad_box.png') repeat-x;}
 
+/* =NAVIGATION
+--------------------------*/
 ul#nav a{
-	text-decoration:none; color: #5C0075; font-weight:bold;	background-image:url('corner_t_r.png'); background-repeat: no-repeat;	background-position: right top;	color:white;}
+	text-decoration:none; color: #FFF; font-weight:bold;	background-image:url('corner_t_r.png'); background-repeat: no-repeat;	background-position: right top;	color:white;}
 
 ul#nav a:hover,ul#nav li#mymine a:hover{
 	color:#333;}
 
 ul#nav li#mymine a{
-	color:white;background:url('corner_my_t_r.png') no-repeat top right;}
+	color:#FFF;background:url('corner_my_t_r.png') no-repeat top right;}
 
 ul#nav li.activelink a{
 	color:white;background:url('corner_act_t_r.png') no-repeat top right;}
+
+ul#nav li a{
+    	color:#FFF;}
 
 ul#nav li#mymine {
 	background:#A32220 url('corner_my_t_l.png') no-repeat;}
@@ -66,93 +114,160 @@ ul#submenulist li a {
 ul#submenulist li a:hover {
 	color:#FFF;text-decoration: underline;font-weight: bold;}
 
+/* =MEGATILE SEARCH
+--------------------------*/
 div.filterBar {
     background:#362923;color:white;}
-
+    
 div#filter_tool_bar {
     background-color:#FFF;
     border-right:1px solid #362923;
     border-left:1px solid #362923;
     border-bottom:1px solid #362923;
 }
-
+    
 .imbox {
     padding:5px 5px 10px 5px; border-top:solid 1px #888; border-bottom:solid 1px #888; height:1.2em;
     font-size:0.8em; background:#9F67AD; color:white;}
 
-#loginbar  a:link, #loginbar a:visited, #loginbar{
-	color:#5C0075;}
-	
-.listtoolbox {
-  background-image: url('grad_box.png');
-  border:1px solid #D0B5D7;
+
+/* =RESULTS TABLES
+-----------------------*/
+table.results tr th {
+    background-color: #362923;font-size: 12px;color:#FFF;
 }
-.listtoolbox {
-  background-image: url('grad_box.png');
-  border:1px solid #D0B5D7;
-}
-.widgetcontainer {
-  border:1px solid #D0B5D7;
-  background: #FFF url('grad_box.png') repeat-x top;
-}
+table.results tr td.highlightCell, table.results tr.even td.highlightCell {
+ 	border-right:1px solid #FFF;background-color: #63BBDF;}
+
 table.results tfoot tr td {
-    background-color: #927F97;
+  color:#FFF;
+  background-color: #362923;
+}
+
+table.results tr.even TD{
+  background-color: #B9E6F9;}
+
+table.results tr.odd TD{
+  border-right:1px solid #B9E6F9;
+  border-bottom:1px solid #B9E6F9;}
+
+table.results tr.stepE TD{
+  background-color: #B9E6F9;}
+
+table.results tr.stepO TD{
+  border-right:1px solid #B9E6F9;
+  border-bottom:1px solid #B9E6F9;}
+
+
+table.results tr.stepOeven TD{
+  background-color: #FFF;
+  border-right:1px solid #F0F8FF; 
+  border-bottom:1px solid #F0F8FF;}
+
+table.results tr.stepOodd TD{
+  background-color: #F0F8FF;
+  border-right:1px solid #FFF; 
+  border-bottom:1px solid #FFF;}
+
+table.results tr.stepEodd TD{
+  background-color: #B9E6F9;}
+
+table.results tr.stepEeven TD{
+	background-color: #63B7DE;
+  border-right:1px solid #B9E6F9;
+  border-bottom:1px solid #B9E6F9;}
+
+
+
+table.results tr td.highlightObject {
+  background-color: #ee6;
+}
+
+
+/* =TOOLBOX RESULTS
+--------------------------*/
+
+.listtoolbox {
+  background-image: url('grad_box.png');
+  border:1px solid #D0B5D7;
 }
 
 #tool_bar_div {
-    background-color:#F5F0FF;
-/*    background-color:#D0B5D7;*/
+    background-color:#362923;
 }
 
-/* =/CUSTOMISABLE LOOK
+.tb_button {
+  border:1px solid #362923;
+}
+
+ul#button_bar li a {
+    color:#FFF;
+}
+.tb_button:hover {
+  margin-right:0;
+  border-bottom:1px solid #6ECCF8;
+  border-right:1px solid #6ECCF8;
+}
+.tb_button_active {
+  border:1px solid #6ECCF8;
+}
+
+/* =WIDGET
 --------------------------*/
 
-div.title h1 {
-    color: #FFF;}
-
-.box .title {
-  clear:both;
-  padding: 5px;
-  text-align: left; font-weight: normal; font-size: 14px; font-weight: bold; color:#FFF;}
-
-.title a:link{
-	color:#FFF;}
-
-table.results tr td.highlightCell, table.results tr.even td.highlightCell {
-  background-color: #FFCBFF;}
+.debt {
+  color: red;
+}
+.address {
+  font-weight: bold;
+}
+.highlightCell{
+  background-color: #D4D4D4;
+}
 
 .widget {
-    max-height:400px;width: 450px;padding:15px;
-    text-align: center; background-color: #F5F0FF;}
-
-.widget p {
-	font-size:10px;	}
+    padding:15px;
+    text-align: center;
+    width: 450px;
+    background-color: #D4D4D4;
+}
 
 .widget_slide {
 	margin-top:10px; max-height:350px;
     overflow-x:none;overflow-y:auto;overflow: auto;}
 
 #bagDescriptionDiv{
-    background-color: #F5F0FF;}
-
+	background-color: #D4D4D4;
+}
 #bagDescriptionDiv:hover{
-	background-color: #E6FFB3;}
+	background-color: #D4D4D4;
+}
 
 #textarea {
-    background-color: #F5F0FF;}
+	width:70%;
+	height:150px;
+	background-color: #D4D4D4;
+	padding:10px;
+}
 
 .blueBg {
-	padding: 20px;margin:20px;width:350px;
-	background-color:#F5F0FF;text-align:center;}
+	background-color:#D4D4D4;
+	text-align:center;
+	padding: 20px;
+	margin:20px;
+	width:350px;
+}
+
+
+
 
 table.dbsources {
 	margin:10px 20px 10px 20px;}
 
 table.dbsources th  {
 	padding: 6px 6px 6px 12px;
-	border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;border-top: 1px solid #C1DAD7;
-	letter-spacing: 2px;text-transform: uppercase;text-align: left;font-weight: bold;font-size: 0.7em;color: white;
-	background-color: #927F97;}
+    background-color: #362923;font-size: 12px;color:#FFF;
+	border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;border-top: 1px solid #C1DAD7;}
 
 table.dbsources td {
 	padding: 6px 6px 6px 12px;
@@ -160,3 +275,19 @@ table.dbsources td {
 
 table.dbsources td.leftcol {
 	border-left: 1px solid #C1DAD7;}
+
+table.dbsources td.internal {
+  border-bottom: 1px solid #C1DAD7;background: #fff;}
+
+table.internal {
+    margin:0px 0px 0px 0px;}
+	/*  margin:10px 20px 10px 20px;}*/
+
+table.internal td {
+  padding: 2px 2px 2px 2px;
+  border-right: 0px solid #fff;border-bottom: 0px solid #fff;background: #fff;}
+
+/* disclosure style is default style of <disclosure> element*/
+.body, .disclosure {
+  margin:5px 6px 5x 6px;
+  font-size: 12px; color: #333;}
