--- a/intermine/webapp/main/resources/webapp/css/widget.css
+++ b/intermine/webapp/main/resources/webapp/css/widget.css
@@ -29,6 +29,13 @@ div.widgetdata{
     padding:0px;
     height:360px;
     width:450px;
+}
+
+div.widgetdataoverflow{
+    clear:left;
+    padding:0px;
+    height:360px;
+    width:450px;
     overflow: auto;
     overflow-y:auto;
 }
