Revert change to the results table headings. Accidental check-in. I believe we will be doing something like this in the near future anyway.

--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -72,6 +72,7 @@ table.results {
 table.results th {
   border-right:1px solid #FFF;
   border-bottom:1px solid #FFF;
+  white-space:nowrap;
   font-size: 12px;
 }
 table.results td {
