--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -62,6 +62,9 @@ div.templateIcon {
 div.resultsPage {
   clear:both; padding-top: 10px;
 }
+
+
+
 	
 /* =TABLE £TABLE,£BAGDETAILS*/
 table.results {
@@ -94,7 +97,41 @@ table.theadbuttons tr td {
     margin:0;
 }
 
+
 .columnHeader {
-  padding:10px 15px 10px 15px;
-  vertical-align:bottom;
+  vertical-align: top;
+  text-align:left;
+  margin:10px;
+}
+
+table.column-header-content {
+    margin:5px 30px 5px 5px;
+    *display: inline; /*IE only hack*/
+}
+
+table.column-header-content td {
+    padding:0 0 5px 0;margin:0;
+    border:none;
+    line-height:1.2em;
+}
+
+.summary_link {
+  float:right;
+  margin:2px;
+  padding:0;
+}
+
+.column-header-content {
+  text-align: left;
+  margin:5px;
+}
+
+.column-header-content input {
+  margin-right:5px;
+}
+
+.column-header-content sup {
+  line-height:0;
+  padding:0;
+  margin:0;
 }
