updates to frontpage style

--- a/modmine/webapp/resources/webapp/model/css/frontpage_sections.css
+++ b/modmine/webapp/resources/webapp/model/css/frontpage_sections.css
@@ -2,7 +2,7 @@
      font-family: Helvetica, "Lucida grande", sans-serif;
      color:#192F39;
      width:1084px;
-     background-color:#61EDF5;
+     /*background-color:#61EDF5;*/
      padding:10px 0;margin:20px 0;
  }
  
