--- a/intermine/webapp/main/resources/webapp/themes/blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/blue/theme.css
@@ -259,29 +259,16 @@ ul#button_bar li a {
 }
 
 table.dbsources {
-	width:1000px;
-	margin:0;
-	border-top: 1px solid #B9E6F9;
-	border-left: 1px solid #B9E6F9;
-	font-size:1em;
-}
+	margin:10px 20px 10px 20px;}
 
 table.dbsources th  {
-	font-size:16px;
-	text-align:left;
-	padding: 5px;
-    background-color: #B9E6F9;color:#004499;
-	border-right: 1px solid #FFF;}
+	padding: 6px 6px 6px 12px;
+    background-color: #192F39;font-size: 12px;color:#FFF;
+	border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;border-top: 1px solid #C1DAD7;}
 
 table.dbsources td {
 	padding: 6px 6px 6px 12px;
-	border-right: 1px solid #B9E6F9;
-	border-bottom: 1px solid #B9E6F9;
-	background: #fff;}
-	
-table.dbsources td h4{
-	margin:0; padding:0;
-	font-size: 16px;}
+	border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;background: #fff;}
 
 table.dbsources td.leftcol {
 	border-left: 1px solid #C1DAD7;}
