--- a/intermine/webapp/main/resources/webapp/css/sorting_experiments.css
+++ b/intermine/webapp/main/resources/webapp/css/sorting_experiments.css
@@ -31,7 +31,10 @@ th.reverseSort a {
         
 .sorting{
     padding: 6px 12px 6px 12px;
-    font: normal 12px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif; border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;color: #fff;}
+    font-size: 12px; 
+    font-weight: normal;
+    border-right: 1px solid #C1DAD7;
+    border-bottom: 1px solid #C1DAD7;}
         
 
 
