--- a/intermine/webapp/main/resources/webapp/themes/blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/blue/theme.css
@@ -286,5 +286,5 @@ table.internal td {
 
 /* disclosure style is default style of <disclosure> element*/
 .body, .disclosure {
-  margin:5px 6px 5x 6px;
+  margin:5px 6px 5px 6px;
   font-size: 12px; color: #333;}
