--- a/intermine/webapp/main/resources/webapp/themes/blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/blue/theme.css
@@ -263,7 +263,7 @@ table.dbsources {
 
 table.dbsources th  {
 	padding: 6px 6px 6px 12px;
-    background-color: #192F39;font-size: 12px;color:#FFF;
+    background-color: #B9E6F9;font-size: 12px;color:#004499;
 	border-right: 1px solid #C1DAD7;border-bottom: 1px solid #C1DAD7;border-top: 1px solid #C1DAD7;}
 
 table.dbsources td {
