Add new hints system to appear at top of webapp pages.

--- a/intermine/webapp/main/resources/webapp/css/errorMessages.css
+++ b/intermine/webapp/main/resources/webapp/css/errorMessages.css
@@ -13,3 +13,11 @@
 
 .lookupError {
     color: red;}
+    
+.hints {
+    color: black;
+    border: 1px;
+    border-style: solid;
+    border-color: #FF6;
+    background-color: #FFC;
+}
