remove reference to missing image.
Former-commit-id: d406ae0661a8a65b2412f5aea5be89ffc84844de

--- a/intermine/webapp/main/resources/webapp/css/webapp.css
+++ b/intermine/webapp/main/resources/webapp/css/webapp.css
@@ -242,7 +242,7 @@ ul#submenulist li {
   line-height: 1.14286;
   background-color: transparent;
   font-size: 14px; font-weight:bold; 
-  background: url('../theme/heading-bg.jpg') top center repeat-x; white-space: nowrap;}
+}
 
 div.templateLine {
   margin-bottom: 5px; margin-top: 5px;}
