--- a/intermine/webapp/main/resources/webapp/css/sorting_experiments.css
+++ b/intermine/webapp/main/resources/webapp/css/sorting_experiments.css
@@ -33,8 +33,10 @@ th.reverseSort a {
     padding: 6px 12px 6px 12px;
     font-size: 12px; 
     font-weight: normal;
+    background-color: white;
     border-right: 1px solid #C1DAD7;
-    border-bottom: 1px solid #C1DAD7;}
+    border-bottom: 1px solid #C1DAD7;
+    }
         
 
 
