Move search into blue box on home page.
Former-commit-id: c37ee5f0ebceaebb7e906083332e2045b0f49164

--- a/modmine/webapp/resources/webapp/model/css/frontpage_sections.css
+++ b/modmine/webapp/resources/webapp/model/css/frontpage_sections.css
@@ -61,6 +61,16 @@
     margin-top:5px;
 }
 
+.frontpage_sections li div li {
+    margin: 0px;
+    padding: 0px;
+    text-align: left;
+    font-size: 0.8em;
+    list-style: disc;
+    margin-left: 15px;
+    width: 220px;
+}
+
 .qs_input {
    border:2px solid #192F39;
    font-size:1.2em;
